--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
+*{
+  margin: 0;
+  padding: 0;
+}
 
+.correcao{
+   color: white;
+  font-sie: 28px;
+}
+
+.de{
+   text-stroke: 3px solid white;
+  font-size: 20px;
+  color: transparent;
+}
+
+.solo{
+  
+}
