--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ p {
   margin: 1rem 0;
 }
 
+a{
+	text-decoration: none;
+}
+
 ::selection {
   background-color: #1D1E70;
   color: #8C91F1;
@@ -41,7 +45,7 @@ nav {
   width: 200px;
 }
 
-.nav-mobile button {
+.nav-mobile a {
   color: #8C91F1;
   padding: 1rem 1.5rem;
   display: block;
