--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body, h1, h2, h3, h4, h5 {
   margin: 0;
 }
 
-#pacotes, #boston-descricao, #india-descricao, #japao-descricao, #chile-descricao, #canada-descricao, #natal-descricao, #bonito-descricao, #ubatuba-descricao, #guaruja-descricao, #capaoda-canoa-descricao, #canela-descricao, #matinhos-descricao, #florianopolis-descricao, #foz-do-iguacu-descricao, #garopaba-descricao, #guaratuba-descricao, #bombinhas-descricao, #balneario-picarras-descricao, #balneario-camboriu-descricao, #bali-descricao, #maldivas-descricao, #noruega-descricao, #roma-descricao, #paris-descricao, #londres-descricao, #dubai-descricao{
+#pacotes, #boston-descricao, #india-descricao, #japao-descricao, #chile-descricao, #canada-descricao, #natal-descricao, #bonito-descricao, #ubatuba-descricao, #guaruja-descricao, #capao-da-canoa-descricao, #canela-descricao, #matinhos-descricao, #florianopolis-descricao, #foz-do-iguacu-descricao, #garopaba-descricao, #guaratuba-descricao, #bombinhas-descricao, #balneario-picarras-descricao, #balneario-camboriu-descricao, #bali-descricao, #maldivas-descricao, #noruega-descricao, #roma-descricao, #paris-descricao, #londres-descricao, #dubai-descricao{
 	display: none;
 }s
 
